# algorithm_timer

./: README.md  algorithms.py  app.py  arr_generators.py  grapher.py  pyproject.toml  requirements.txt  setup.py  timer.py
Algo_Timer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/algorithm_timer/: algorithms.py  app.py  arr_generators.py  timer.py
tests/: test_algorithm.py  test_app.py  test_arr_gen.py  test_arr_generators.py  test_random_arr_gen.py  test_timer.py
